--- a/client/src/components/Homeowner/Homeowner.css
+++ b/client/src/components/Homeowner/Homeowner.css
@@ -4,9 +4,21 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  height: 90vh;
+  height: 50vh;
   width: 100%;
   display: flex;
+}
+
+.iconContainer {
+  padding-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.homeIcon {
+  height: 75px;
+  width: 75px;
 }
 
 .hero {
@@ -20,6 +32,51 @@
   margin: auto;
 }
 
+.smallHeaderWhy {
+  font-family: 'Cinzel', serif;
+  font-weight: 700;
+  color:  #ffffff;
+  font-size: 24px;
+  letter-spacing: 0.1em;
+  text-align: center;
+  width: 25%;
+  padding-top: 50px;
+  /* margin-top: 15px; */
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+}
+
+.smallHeaderDispute {
+  font-family: 'Cinzel', serif;
+  font-weight: 700;
+  color:  #ffffff;
+  font-size: 24px;
+  letter-spacing: 0.1em;
+  text-align: left;
+  width: 25%;
+  padding-top: 50px;
+  /* margin-top: 15px; */
+  margin-bottom: 50px;
+  /* margin-left: auto;
+  margin-right: auto; */
+}
+
+.heroHeader {
+  font-family: 'Cinzel', serif;
+  color:  #ffffff;
+  font-size: 64px;
+  letter-spacing: 0.2em;
+  list-style: none;
+  text-align: center;
+  width: 100%;
+  text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
 .text {
   font-family: 'Cinzel', serif;
   color:  #ffffff;
@@ -27,8 +84,26 @@
   letter-spacing: 0.1em;
   text-align: center;
   width: 70%;
-  margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
   line-spacing: 5px;
+}
+
+.textContainer {
+  height: 150vh;
+  width: 100%;
+  background-color: #3587a4;
+}
+
+.whyText {
+  font-family: 'Cinzel', serif;
+  color:  #ffffff;
+  font-size: 16px;
+  letter-spacing: 0.1em;
+  text-align: center;
+  width: 70%;
+  margin-top: -15px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 2;
 }
