--- a/client/src/components/Homeowner/Homeowner.css
+++ b/client/src/components/Homeowner/Homeowner.css
@@ -41,7 +41,6 @@
   text-align: center;
   width: 25%;
   padding-top: 50px;
-  /* margin-top: 15px; */
   margin-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
@@ -57,10 +56,7 @@
   text-align: left;
   width: 25%;
   padding-top: 50px;
-  /* margin-top: 15px; */
   margin-bottom: 50px;
-  /* margin-left: auto;
-  margin-right: auto; */
 }
 
 .heroHeader {
@@ -90,9 +86,10 @@
 }
 
 .textContainer {
-  height: 150vh;
+  height: 100%;
   width: 100%;
   background-color: #3587a4;
+  padding-bottom: 50px;
 }
 
 .whyText {
@@ -106,4 +103,39 @@
   margin-left: auto;
   margin-right: auto;
   line-height: 2;
+}
+
+.footer {
+  background-color: #2d848a;
+  width: 100%;
+  height: 30vh;
+  text-align: center;
+}
+
+.footerHeader {
+  font-family: 'Cinzel', serif;
+  font-weight: 700;
+  color:  #ffffff;
+  font-size: 32px;
+  letter-spacing: 0.1em;
+  text-align: center;
+  width: 25%;
+  padding-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+
+.footerText {
+  font-family: 'Cinzel', serif;
+  color:  #ffffff;
+  font-size: 16px;
+  letter-spacing: 0.1em;
+  text-align: center;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 2;
+  padding-bottom: 75px;
 }
