--- a/client/src/components/HomePage/HomePage.css
+++ b/client/src/components/HomePage/HomePage.css
@@ -151,6 +151,8 @@
   background-color: #2d848a;
   width: 100%;
   height: 30vh;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footerHeader {
