--- a/client/src/components/Homeowner/Homeowner.css
+++ b/client/src/components/Homeowner/Homeowner.css
@@ -16,9 +16,23 @@
   text-align: center;
 }
 
+.iconContainerSmall {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
 .homeIcon {
   height: 75px;
   width: 75px;
+}
+
+.icons {
+  height: 50px;
+  width: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero {
@@ -41,7 +55,7 @@
   text-align: center;
   width: 25%;
   padding-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   text-transform: uppercase;
@@ -92,6 +106,11 @@
   padding-bottom: 50px;
 }
 
+.homeIcon {
+  height: 50px;
+  width: 50px;
+}
+
 .whyText {
   font-family: 'Cinzel', serif;
   color:  #ffffff;
@@ -110,6 +129,8 @@
   width: 100%;
   height: 30vh;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footerHeader {
