--- a/client/src/components/Quote/Quote.css
+++ b/client/src/components/Quote/Quote.css
@@ -22,6 +22,7 @@
   
   .text {
     font-family: 'Cinzel', serif;
+    font-weight: 700;
     color:  #ffffff;
     font-size: 26px;
     letter-spacing: 0.1em;
@@ -30,5 +31,50 @@
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 25px;
     line-spacing: 5px;
+  }
+
+  .iframeContainer {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+  }
+
+  .footer {
+    text-align: center;
+    background-color: #2d848a;
+    width: 100%;
+    height: 30vh;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .footerHeader {
+    font-family: 'Cinzel', serif;
+    font-weight: 700;
+    color:  #ffffff;
+    font-size: 32px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    width: 25%;
+    padding-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    text-transform: uppercase;
+    text-decoration: underline;
+  }
+  
+  .footerText {
+    font-family: 'Cinzel', serif;
+    color:  #ffffff;
+    font-size: 16px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 2;
+    padding-bottom: 75px;
   }
