--- a/client/src/components/Quote/Quote.css
+++ b/client/src/components/Quote/Quote.css
@@ -6,14 +6,25 @@
     background-size: cover;
     height: 90vh;
     width: 100%;
-    /* display: flex; */
+    display: flex;
   }
   
+  .hero {
+    background-color: #c1dff0;
+    background: rgba(0,0,0,0.5);
+    border-style: solid;
+    border-radius: 1px;
+    border-width: medium;
+    border-color: #2d898b;
+    width: 90%;
+    margin: auto;
+  }
+
   .text {
     font-family: 'Cinzel', serif;
-    font-weight: 700;
+    font-weight: 100;
     color:  #ffffff;
-    font-size: 26px;
+    font-size: 18px;
     letter-spacing: 0.1em;
     text-align: center;
     width: 70%;
@@ -21,14 +32,13 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 25px;
-    line-spacing: 5px;
   }
 
   .footer {
     text-align: center;
     background-color: #2d848a;
     width: 100%;
-    height: 30vh;
+    height: 35vh;
     margin-left: auto;
     margin-right: auto;
   }
@@ -69,4 +79,48 @@
   .header {
     margin: auto;
     width: 100%;
+  }
+
+  .label {
+    padding: 10px;
+    margin-top: 5%;
+    text-align: left;
+    margin-left: 5px;
+  }
+
+  .textArea {
+    /* text-align: center; */
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  
+  .textAreaBox {
+    margin-top: 2%;
+  }
+
+  .buttonBox {
+    margin: auto;
+    text-align: center;
+  }
+
+  .button {
+    font-family: 'Cinzel', serif;
+    color: #fff;
+    background-color: #2d848a;
+    width: 125px;
+    border-radius: 6px;
+    font-size: 18px;
+    transition: 0.2s;
+  }
+
+  .button:hover {
+    border-style: solid;
+    border-radius: 6px;
+    border-width: thin;
+    background-color: #C1DFF0;
+    border-color: #3587A4;
+    cursor: pointer;
+    font-size: 24px;
+    width: 175px;
   }
